# ProgettoScacchiera

./: .gitignore  Board.h  Brainstorming  CMakeLists.txt  Piece.h  README.md  main.cpp
executables/: main.cpp  replay.cpp  scacchiera.cpp
include/: Board.h  Computer.h  Piece.h  Position.h
src/: board.cpp  computer.cpp  piece.cpp  position.cpp
